Updated about me and project descriptions

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                       About me
                     </h5>
                   </div>
-                  <p>Apparently a lot of people find it super hard to pronounce my name so just call me by my nickname <strong>Tushar</strong>. As a developer and forensic analyst, it's my job to find problems and build solutions. For fun, however, I look for more! A great entrepraneur sells you a solution for the problem you didn't realize you had. I can't stop, because each new project is an exciting doorway to discovering the most innovative solutions available. And while the 'move fast and break things' mantra doesn't fly so well at the police department, I've got plenty of experience breaking (and fixing) things in my personal lab.                  </p>
+                  <p>As a developer and forensic analyst, it's my job to find problems and build solutions. For fun, however, I look for more! A great entrepraneur sells you a solution for the problem you didn't realize you had. I can't stop, because each new project is an exciting doorway to discovering the most innovative solutions available. And while the 'move fast and break things' mantra doesn't fly so well at the police department, I've got plenty of experience breaking (and fixing) things in my personal lab.                  </p>
                  
                 </div>
               </div>
@@ -652,7 +652,7 @@
                   <div class="col-sm-8">
                     <h2 class="w-title">Granville PD Forensic Lab - Evidence Tracking System</h2>
                     <div class="w-more">
-                      <p>Full-stack web development with Springboot framework. Increased the effeiency of the forensics lab by 300%. System tracks all the digital evidence and notifies user automatically of all the changes</p>
+                      <p>Full-stack web development with Springboot framework. Increased the efficiency of the forensics lab by 300%. System tracks all the digital evidence and notifies user automatically of all the changes</p>
                       <span class="w-ctegory">Spring Boot Application</span> / <span class="w-date">February 2018</span>
                     </div>
                   </div>
@@ -677,7 +677,7 @@
                     <div class="col-sm-8">
                       <h2 class="w-title">Granville PD - Search Warrant and Arrest Warrant Generator</h2>
                       <div class="w-more">
-                        <p>System keeps track of all the previous warrants officers have generated. Reduced confusions and increased efficiency by 40%</p>
+                        <p>More time-efficient than manual generation, this program prevents warrant denial due to technical errors. Official language is pulled verbatim from the state legislators website and auto fills the correct fields in the state provided warrant PDF form. Each PDF also generates a reference number to easily return to an exact warrant.</p>
                         <span class="w-ctegory">Spring Boot Application</span> / <span class="w-date">August 2018</span>
                       </div>
                     </div>
@@ -702,7 +702,7 @@
                       <div class="col-sm-8">
                         <h2 class="w-title">Granville PD Forensic Lab - sms Query System</h2>
                         <div class="w-more">
-                          <p>Integrated Twilio API. Allows officers from other Departments to get live status about their cases</p>
+                          <p>Centralized solution provides immediate response to inquiries about completion status of evidence. System is user friendly and streamlines state-wide law enforcement usage of Granville PD's digital forensic laboratory.</p>
                           <span class="w-ctegory">Spring Boot Application</span> / <span class="w-date">September 2018</span>
                         </div>
                       </div>
@@ -752,7 +752,7 @@
                           <div class="col-sm-8">
                             <h2 class="w-title">Granville PD - Case Record</h2>
                             <div class="w-more">
-                              <p>Project collected all the paper documents from 2006-2010 and stored it in local MS-SQL server with frontend web application to access them</p>
+                              <p>System for digital archival of records with multi-part indexing for easy retrieval. </p>
                               <span class="w-ctegory">.NET Framework</span> / <span class="w-date">May 2018</span>
                             </div>
                           </div>
