--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       <div class="table-cell">
         <div class="container">
           <h1 class="intro-title mb-4">Call me Tushar</h1>
-          <p class="intro-subtitle"><span class="text-slider-items">Full Stack Developer, Forensic Analyst, Database Administrator, Part time Freelancer</span><strong class="text-slider"></strong></p>
+          <p class="intro-subtitle"><span class="text-slider-items">Full Stack Developer, Forensic Analyst, Database Administrator</span><strong class="text-slider"></strong></p>
         </div>
       </div>
     </div>
