--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       <div class="table-cell">
         <div class="container">
           <h1 class="intro-title mb-4">Call me Tushar</h1>
-          <p class="intro-subtitle"><span class="text-slider-items">Full Stack Developer, Forensic Analyst, Database Administrator</span><strong class="text-slider"></strong></p>
+          <p class="intro-subtitle"><span class="text-slider-items">Systems Developer, Forensic Analyst, Database Administrator</span><strong class="text-slider"></strong></p>
         </div>
       </div>
     </div>
@@ -108,7 +108,7 @@
                   <div class="col-sm-6 col-md-7">
                     <div class="about-info">
                       <p><span class="title-s">Name: </span> <span>Mahbubur Rahman (Tushar)</span></p>
-                      <p><span class="title-s">Profile: </span> <span>Full Stack Developer</span></p>
+                      <p><span class="title-s">Profile: </span> <span>Systems Developer and Forensic Analyst</span></p>
                       <p><span class="title-s">Email: </span> <span>mrahman4595@gmail.com</span></p>
                       <p><span class="title-s">Phone: </span> <span>(240) 490-6943</span></p>
                     </div>
