Added index or updated index

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                       About me
                     </h5>
                   </div>
-                  <p>As a developer and forensic analyst, it's my job to find problems and build solutions. For fun,
+                  <p>As a Systems developer and forensic analyst, it's my job to find problems and build solutions. For fun,
                     however, I look for more! A great entrepraneur sells you a solution for the problem you didn't
                     realize you had. I can't stop, because each new project is an exciting doorway to discovering the
                     most innovative solutions available. And while the 'move fast and break things' mantra doesn't fly
@@ -597,7 +597,7 @@
               <span class="ico-circle"><i class="ion-ios-time"></i></span>
             </div>
             <div class="counter-num">
-              <p class="counter">5</p>
+              <p class="counter">6</p>
               <span class="counter-text">YEARS OF EXPERIENCE AS SYSADMIN</span>
             </div>
           </div>
@@ -630,7 +630,7 @@
               <span class="ico-circle"><i class="ion-ios-time"></i></span>
             </div>
             <div class="counter-num">
-              <p class="counter">1.5</p>
+              <p class="counter">2</p>
               <span class="counter-text">YEARS OF EXPERIENCE AS FORENSIC ANALYST</span>
             </div>
           </div>
@@ -649,7 +649,7 @@
               Projects
             </h3>
             <p class="subtitle-a">
-              Due to the nature of the projects I can't display my codes here
+              Due to the nature of the projects I can't display my codes here. But feel free to ask me any questions to evaluate my skillset.
             </p>
             <div class="line-mf"></div>
           </div>
