updated my site

--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
       <div class="table-cell">
         <div class="container">
           <h1 class="intro-title mb-4">Call me Tushar</h1>
-          <p class="intro-subtitle"><span class="text-slider-items">Systems Developer, Forensic Analyst, Database
-              Administrator</span><strong class="text-slider"></strong></p>
+          <p class="intro-subtitle"><span class="text-slider-items">DevOps Engineer, Systems Developer, Forensic
+              Analyst</span><strong class="text-slider"></strong></p>
         </div>
       </div>
     </div>
@@ -128,7 +128,8 @@
                       About me
                     </h5>
                   </div>
-                  <p>As a Systems developer and forensic analyst, it's my job to find problems and build solutions. For fun,
+                  <p>As a Systems developer and forensic analyst, it's my job to find problems and build solutions. For
+                    fun,
                     however, I look for more! A great entrepraneur sells you a solution for the problem you didn't
                     realize you had. I can't stop, because each new project is an exciting doorway to discovering the
                     most innovative solutions available. And while the 'move fast and break things' mantra doesn't fly
@@ -144,7 +145,7 @@
                 <div class="skill-mf">
 
                   <p class="title-s"><i class="ion-university"></i> Education: </p>
-                  <span> <strong> Bachelor of Science in Business Information Systems Management 
+                  <span> <strong> Bachelor of Science in Business Information Systems Management
                     </strong></span>
                   <span>
                     <p>Fairmont State University, Fairmont, West Virginia</p>
@@ -239,56 +240,19 @@
             </div>
           </div>
         </div>
-        <div class="col-md-3">
-          <div class="service-box">
-            <div class="service-ico">
-              <span class="ico-circle"><i class="devicon-html5-plain colored"></i></span>
-            </div>
-            <div class="service-content">
-              <h4 class="s-title">HTML5</h4>
-              <span>Expert:</span>
-              <span class="pull-right">85%</span>
-              <div class="progress">
-                <div class="progress-bar bg-success" role="progressbar" style="width: 85%;" aria-valuenow="85"
-                  aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-              <p class="s-description text-center">
 
-              </p>
-            </div>
-          </div>
-        </div>
+
         <div class="col-md-3">
           <div class="service-box">
             <div class="service-ico">
-              <span class="ico-circle"><i class="devicon-css3-plain colored ico-circle"></i></span>
+              <span class="ico-circle"><img class="image-logo" src="img/Ansible_logo.svg.png" alt=""></span>
             </div>
             <div class="service-content">
-              <h2 class="s-title">css3</h2>
-              <span>Proficent</span>
+              <h4 class="s-title">Ansible</h4>
+              <span>Proficent:</span>
               <span class="pull-right">75%</span>
               <div class="progress">
-                <div class="progress-bar bg-yellow" role="progressbar" style="width: 76%;" aria-valuenow="85"
-                  aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-              <p class="s-description text-center">
-
-              </p>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-md-3">
-          <div class="service-box">
-            <div class="service-ico">
-              <span class="ico-circle"><img class="image-logo" src="img/spring.svg" alt=""></span>
-            </div>
-            <div class="service-content">
-              <h2 class="s-title">Spring Boot</h2>
-              <span>Expert</span>
-              <span class="pull-right">80%</span>
-              <div class="progress">
-                <div class="progress-bar bg-success" role="progressbar" style="width: 80%;" aria-valuenow="85"
+                <div class="progress-bar bg-success" role="progressbar" style="width: 75%;" aria-valuenow="75"
                   aria-valuemin="0" aria-valuemax="100"></div>
               </div>
               <p class="s-description text-center">
@@ -302,14 +266,14 @@
         <div class="col-md-3">
           <div class="service-box">
             <div class="service-ico">
-              <span class="ico-circle"><i class="devicon-bootstrap-plain-wordmark colored"></i></span>
+              <span class="ico-circle"><img class="image-logo" src="img/Jenkins.png" alt=""></span>
             </div>
             <div class="service-content">
-              <h2 class="s-title">Bootstrap 4</h2>
-              <span>Proficent</span>
+              <h4 class="s-title">jenkins</h4>
+              <span>Proficent:</span>
               <span class="pull-right">75%</span>
               <div class="progress">
-                <div class="progress-bar bg-yellow" role="progressbar" style="width: 75%;" aria-valuenow="85"
+                <div class="progress-bar bg-success" role="progressbar" style="width: 75%;" aria-valuenow="75"
                   aria-valuemin="0" aria-valuemax="100"></div>
               </div>
               <p class="s-description text-center">
@@ -318,6 +282,51 @@
             </div>
           </div>
         </div>
+
+
+        <div class="col-md-3">
+          <div class="service-box">
+            <div class="service-ico">
+              <span class="ico-circle"><img class="image-logo" src="img/Docker.png" alt=""></span>
+            </div>
+            <div class="service-content">
+              <h4 class="s-title">docker</h4>
+              <span>Proficent:</span>
+              <span class="pull-right">75%</span>
+              <div class="progress">
+                <div class="progress-bar bg-success" role="progressbar" style="width: 75%;" aria-valuenow="75"
+                  aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+              <p class="s-description text-center">
+
+              </p>
+            </div>
+          </div>
+        </div>
+
+
+        <div class="col-md-3">
+          <div class="service-box">
+            <div class="service-ico">
+              <span class="ico-circle"><img class="image-logo" src="img/Gitlab.png" alt=""></span>
+            </div>
+            <div class="service-content">
+              <h4 class="s-title">gitlab</h4>
+              <span>Proficent:</span>
+              <span class="pull-right">75%</span>
+              <div class="progress">
+                <div class="progress-bar bg-success" role="progressbar" style="width: 75%;" aria-valuenow="75"
+                  aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+              <p class="s-description text-center">
+
+              </p>
+            </div>
+          </div>
+        </div>
+
+
+
 
 
 
@@ -334,7 +343,95 @@
       <button type="button" class="btn btn-primary btn-lg" data-toggle="collapse" data-target="#demo">Show more</button>
       <div id="demo" class="collapse p-3">
 
+
+
+
         <div class="row">
+
+
+          <div class="col-md-3">
+            <div class="service-box">
+              <div class="service-ico">
+                <span class="ico-circle"><i class="devicon-html5-plain colored"></i></span>
+              </div>
+              <div class="service-content">
+                <h4 class="s-title">HTML5</h4>
+                <span>Expert:</span>
+                <span class="pull-right">85%</span>
+                <div class="progress">
+                  <div class="progress-bar bg-success" role="progressbar" style="width: 85%;" aria-valuenow="85"
+                    aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+                <p class="s-description text-center">
+
+                </p>
+              </div>
+            </div>
+          </div>
+
+
+
+          <div class="col-md-3">
+            <div class="service-box">
+              <div class="service-ico">
+                <span class="ico-circle"><i class="devicon-css3-plain colored ico-circle"></i></span>
+              </div>
+              <div class="service-content">
+                <h2 class="s-title">css3</h2>
+                <span>Proficent</span>
+                <span class="pull-right">75%</span>
+                <div class="progress">
+                  <div class="progress-bar bg-yellow" role="progressbar" style="width: 76%;" aria-valuenow="85"
+                    aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+                <p class="s-description text-center">
+
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-3">
+            <div class="service-box">
+              <div class="service-ico">
+                <span class="ico-circle"><img class="image-logo" src="img/spring.svg" alt=""></span>
+              </div>
+              <div class="service-content">
+                <h2 class="s-title">Spring Boot</h2>
+                <span>Expert</span>
+                <span class="pull-right">80%</span>
+                <div class="progress">
+                  <div class="progress-bar bg-success" role="progressbar" style="width: 80%;" aria-valuenow="85"
+                    aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+                <p class="s-description text-center">
+
+                </p>
+              </div>
+            </div>
+          </div>
+
+
+          <div class="col-md-3">
+            <div class="service-box">
+              <div class="service-ico">
+                <span class="ico-circle"><i class="devicon-bootstrap-plain-wordmark colored"></i></span>
+              </div>
+              <div class="service-content">
+                <h2 class="s-title">Bootstrap 4</h2>
+                <span>Proficent</span>
+                <span class="pull-right">75%</span>
+                <div class="progress">
+                  <div class="progress-bar bg-yellow" role="progressbar" style="width: 75%;" aria-valuenow="85"
+                    aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+                <p class="s-description text-center">
+
+                </p>
+              </div>
+            </div>
+          </div>
+
           <div class="col-md-3">
             <div class="service-box">
               <div class="service-ico">
@@ -396,25 +493,7 @@
             </div>
           </div>
 
-          <div class="col-md-3">
-            <div class="service-box">
-              <div class="service-ico">
-                <span class="ico-circle"><i class="devicon-php-plain colored"></i></span>
-              </div>
-              <div class="service-content">
-                <h2 class="s-title">PHP</h2>
-                <span>Competent</span>
-                <span class="pull-right">60%</span>
-                <div class="progress">
-                  <div class="progress-bar bg-warning" role="progressbar" style="width: 60%;" aria-valuenow="85"
-                    aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-                <p class="s-description text-center">
-
-                </p>
-              </div>
-            </div>
-          </div>
+  
 
           <div class="col-md-3">
             <div class="service-box">
@@ -649,7 +728,8 @@
               Projects
             </h3>
             <p class="subtitle-a">
-              Due to the nature of the projects I can't display my codes here. But feel free to ask me any questions to evaluate my skillset.
+              Due to the nature of the projects I can't display my codes here. But feel free to ask me any questions to
+              evaluate my skillset.
             </p>
             <div class="line-mf"></div>
           </div>
@@ -665,7 +745,7 @@
             <div class="work-content">
               <div class="row">
                 <div class="col-sm-8">
-                  <h2 class="w-title">Granville PD Forensic Lab - Evidence Tracking System</h2>
+                  <h2 class="w-title">Granville PD Forensic Lab - Digital Evidence Management System</h2>
                   <div class="w-more">
                     <p>Full-stack web development with Springboot framework. Increased the efficiency of the forensics
                       lab by 300%. System tracks all the digital evidence and notifies user automatically of all the
@@ -675,7 +755,7 @@
                 </div>
                 <div class="col-sm-4">
                   <div class="w-like">
-                    <span class="devicon-github-plain-wordmark colored"></span>
+                    <span> <img class="image-logo" src="img/Gitlab.png" alt=""></span>
                   </div>
                 </div>
               </div>
@@ -703,7 +783,7 @@
                 </div>
                 <div class="col-sm-4">
                   <div class="w-like">
-                    <span class="devicon-github-plain-wordmark colored"></span>
+                    <span> <img class="image-logo" src="img/Gitlab.png" alt=""></span>
                   </div>
                 </div>
               </div>
@@ -730,7 +810,7 @@
                 </div>
                 <div class="col-sm-4">
                   <div class="w-like">
-                    <span class="devicon-github-plain-wordmark colored"></span>
+                    <span> <img class="image-logo" src="img/Gitlab.png" alt=""></span>
                   </div>
                 </div>
               </div>
@@ -747,7 +827,7 @@
             <div class="work-content">
               <div class="row">
                 <div class="col-sm-8">
-                  <h2 class="w-title">Town of Granville - Public Works Workorder</h2>
+                  <h2 class="w-title">Town of Granville - Public Works Management System</h2>
                   <div class="w-more">
                     <p>Town's first digital ticketing system for public works</p>
                     <span class="w-ctegory">Spring Boot Application</span> / <span class="w-date">May 2018</span>
@@ -755,7 +835,7 @@
                 </div>
                 <div class="col-sm-4">
                   <div class="w-like">
-                    <span class="devicon-github-plain-wordmark colored"></span>
+                    <span> <img class="image-logo" src="img/Gitlab.png" alt=""></span>
                   </div>
                 </div>
               </div>
@@ -780,7 +860,7 @@
                 </div>
                 <div class="col-sm-4">
                   <div class="w-like">
-                    <span class="ion-ios-bolt"></span>
+                    <span> <img class="image-logo" src="img/Gitlab.png" alt=""></span>
                   </div>
                 </div>
               </div>
@@ -807,7 +887,7 @@
                 </div>
                 <div class="col-sm-4">
                   <div class="w-like">
-                    <span class="ion-ios-bolt"></span>
+                    <span> <img class="image-logo" src="img/Gitlab.png" alt=""></span>
                   </div>
                 </div>
               </div>
